<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="14dp"
    android:layout_marginBottom="30dp"
    style="@style/ScreenBackgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/settings_notification"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            style="@style/TextColor"
            android:id="@+id/txt"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

        <Switch
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/txt"
            android:layout_marginTop="16dp"
            android:id="@+id/voiceSwitch"
            android:text="@string/notification"
            android:layoutDirection="rtl"
            android:thumbTint="@color/switch_thumb_color"
            android:trackTint="@color/switch_track_color"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <RadioGroup
            android:layout_width="match_parent"
            android:id="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@id/voiceSwitch"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:backgroundTint="@color/red"
                android:text="@string/voiced"
                android:paddingStart="8dp"
                app:buttonTint="#FF5D5A"
                android:id="@+id/voicedRadio"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />
            <RadioButton
                android:layout_width="match_parent"
                android:backgroundTint="@color/red"
                android:text="@string/silent"
                android:paddingStart="8dp"
                android:id="@+id/silentRadio"
                app:buttonTint="#FF5D5A"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />


        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_backround"
            android:text="@string/save"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:id="@+id/saveBtn"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>