<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_bg"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/home_indicator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/homeIndicator"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        style="@style/TextColorBottomDialog"
        android:id="@+id/filterTv"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/homeIndicator"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/fragment_search_filter"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@id/filterTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:id="@+id/resetContainer"
        android:paddingVertical="8dp"
        android:background="@drawable/black_rectangle_16"
        android:paddingHorizontal="16dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_reset"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/resetImg"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/resetImg"
            android:layout_marginStart="8dp"
            style="@style/TextColorBottomDialog"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/bottom_sheet_dialog_reset"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/bottom_sheet_dialog_sort_by"
        android:fontFamily="@font/nunito_regular"
        style="@style/TextColorBottomDialog"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/filterTv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24.5dp"
        android:layout_marginTop="24dp"
        android:id="@+id/sortByTv"
        android:layout_height="wrap_content"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:id="@+id/chipLayout"
        style="@style/TextColor"
        app:layout_constraintTop_toBottomOf="@id/sortByTv"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="15dp"
        app:chipSpacing="8dp"
        app:singleSelection="false"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/chipLayout"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/red_rectangle_24"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="32dp"
        android:text="@string/bottom_sheet_dialog_save"
        android:layout_marginBottom="48dp"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_medium"
        android:id="@+id/saveBtn"
        android:layout_height="48dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>