<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    style="@style/ScreenBackgroundColor"
    android:layout_height="match_parent">

    <TextView
        style="@style/TextColor"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/fragment_sign_in_log_in"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/logInTxt"
        android:textSize="55sp"
        android:layout_height="wrap_content"/>

 <com.google.android.material.textfield.TextInputLayout
     android:layout_width="match_parent"
     app:layout_constraintTop_toBottomOf="@id/logInTxt"
     android:layout_marginTop="40dp"
     app:boxCornerRadiusBottomEnd="16dp"
     app:boxCornerRadiusBottomStart="16dp"
     style="@style/BoxStrokeColor"
     app:boxCornerRadiusTopEnd="16dp"
     app:boxCornerRadiusTopStart="16dp"
     android:id="@+id/emailLayout"
     android:layout_marginHorizontal="16dp"
     android:layout_height="wrap_content">

     <EditText
         android:layout_width="match_parent"
         android:id="@+id/emailEt"
         android:inputType="textEmailAddress"
         android:drawablePadding="6dp"
         style="@style/TextColor"
         android:hint="@string/fragment_sign_in_enter_your_email"
         android:drawableStart="@drawable/email"
         android:layout_height="match_parent"/>

 </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        android:layout_marginTop="20dp"
        android:id="@+id/passwordLayout"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
       style="@style/BoxStrokeColor"
        android:layout_marginHorizontal="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/passwordEt"
            android:drawablePadding="6dp"
            android:hint="@string/fragment_sign_in_enter_your_email"
            style="@style/TextColor"
            android:inputType="textPassword"
            android:drawableStart="@drawable/lock"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/button_backround"
        app:backgroundTint="@null"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_sign_in_log_in"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:id="@+id/loginBtn"
        android:layout_height="70dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/loginBtn"
        app:layout_constraintBottom_toBottomOf="@id/loginBtn"
        app:layout_constraintStart_toStartOf="@id/loginBtn"
        app:layout_constraintEnd_toEndOf="@id/loginBtn"
        android:indeterminateTint="@color/white"
        android:layout_height="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        style="@style/TextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp"
        android:textSize="24sp"
        android:id="@+id/signUp"
        android:text="@string/fragment_sign_in_sign_up"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>