<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/ScreenBackgroundColor"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <TextView
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/fragment_sign_in_sign_up"
        android:textStyle="bold"
        android:id="@+id/logInTxt"
        style="@style/TextColor"
        android:textSize="55sp"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/logInTxt"
        android:layout_marginTop="40dp"
        android:id="@+id/fullNameLayout"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        style="@style/BoxStrokeColor"
        app:boxStrokeColor="#EE5452"
        app:boxCornerRadiusTopStart="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/fullNameEt"
            android:drawablePadding="6dp"
            style="@style/TextColor"
            android:inputType="textPersonName"
            android:hint="@string/fragment_sign_up_enter_your_full_name"
            android:drawableStart="@drawable/user"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/fullNameLayout"
        android:layout_marginTop="20dp"
        style="@style/BoxStrokeColor"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeColor="#EE5452"
        android:id="@+id/emailLayout"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/emailEt"
            android:drawablePadding="6dp"
            style="@style/TextColor"
            android:hint="@string/fragment_sign_in_enter_your_email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/email"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        android:layout_marginTop="20dp"
        android:id="@+id/passwordLayout"
        style="@style/BoxStrokeColor"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxStrokeColor="#EE5452"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        android:layout_marginHorizontal="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/passwordEt"
            android:drawablePadding="6dp"
            style="@style/TextColor"
            android:inputType="textPassword"
            android:hint="@string/fragment_sign_in_enter_your_email"
            android:drawableStart="@drawable/lock"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/button_backround"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_sign_in_sign_up"
        android:id="@+id/signUpBtn"
        android:textSize="26sp"
        android:layout_height="70dp"/>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/signUpBtn"
        app:layout_constraintBottom_toBottomOf="@id/signUpBtn"
        app:layout_constraintStart_toStartOf="@id/signUpBtn"
        app:layout_constraintEnd_toEndOf="@id/signUpBtn"
        android:indeterminateTint="@color/white"
        android:layout_height="40dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>