<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/ScreenBackgroundColor"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:id="@+id/refreshLayout"
        android:layout_gravity="top"
        android:layout_marginTop="40dp"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:id="@+id/homeScroll"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:layout_width="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="62dp"
                    android:layout_marginStart="15dp"
                    style="@style/TextColor"
                    android:text="@string/fragment_home_lasted_news"
                    android:textSize="18sp"
                    android:id="@+id/lastedNewsTv"
                    android:fontFamily="@font/new_york_small_medium"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/lastedNewsTv"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="5dp"
                    android:id="@+id/seeAllLayout"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/fragment_home_see_all"
                        style="@style/SeeAllTextColor"
                        android:textSize="12sp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/nunito_variablefont_wght"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:layout_width="12dp"
                        android:src="@drawable/combined_shape"
                        android:layout_gravity="center_vertical"
                        android:layout_height="12dp"/>

                </LinearLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/lastedNewsTv"
                    android:orientation="horizontal"
                    android:id="@+id/banners"
                    android:paddingHorizontal="15dp"
                    android:layout_marginTop="16dp"
                    android:layout_height="240dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/banners"
                    android:orientation="horizontal"
                    android:layout_marginTop="24dp"
                    android:id="@+id/categories"
                    tools:listitem="@layout/category_item"
                    android:layout_marginHorizontal="15dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/categories"
                    android:layout_marginTop="12dp"
                    android:id="@+id/news"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    tools:listitem="@layout/news_item_in_category"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginHorizontal="15dp"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/searchContainer"
        android:orientation="horizontal"
        android:layout_marginTop="45dp"
        android:layout_gravity="top"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/searchEt"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/notificationImg"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/notificationImg"
            android:hint="@string/fragment_home_dogecoin_to_the_moon"
            android:paddingStart="16dp"
            android:drawableEnd="@drawable/ic_search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:background="@drawable/gray_rectangle_16"
            android:layout_marginEnd="16dp"
            android:layout_height="33dp"
            tools:ignore="RtlSymmetry" />



        <ImageView
            android:layout_width="33dp"
            android:id="@+id/notificationImg"
            android:layout_marginEnd="5dp"
            android:padding="8dp"
            android:background="@drawable/red_oval_bg"
            android:src="@drawable/ic_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="33dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/view_loading"
        android:id="@+id/loading"/>

    <include layout="@layout/view_error"
        android:id="@+id/error"/>


</FrameLayout>